<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shake_dialog_rounded_corner"
    android:padding="20dp">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/img_cocktail"
        android:layout_width="0dp"
        android:layout_height="173dp"
        android:src="@drawable/ic_mojito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:siRadius="20dp" />

    <TextView
        android:id="@+id/tv_name_cocktail"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mock_mojito"
        app:layout_constraintStart_toStartOf="@+id/img_cocktail"
        app:layout_constraintTop_toBottomOf="@+id/img_cocktail" />

    <TextView
        android:id="@+id/tv_alcohol"
        style="@style/MeasureTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_alcohol"
        app:layout_constraintStart_toStartOf="@+id/tv_name_cocktail"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_cocktail" />

    <ImageView
        android:id="@+id/img_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_alcohol"
        app:layout_constraintStart_toEndOf="@+id/tv_alcohol"
        app:layout_constraintTop_toTopOf="@+id/tv_alcohol"
        app:srcCompat="@drawable/ic_ingredients" />

    <TextView
        android:id="@+id/tv_numbers_of_ingredients"
        style="@style/MeasureTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/mock_ingredients"
        app:layout_constraintStart_toEndOf="@+id/img_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_cocktail" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@+id/tv_alcohol"
        app:layout_constraintTop_toBottomOf="@+id/tv_alcohol" />

    <TextView
        android:id="@+id/tv_read_more"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/read_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_numbers_of_ingredients" />
</androidx.constraintlayout.widget.ConstraintLayout>
